--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react5/you-player",
-  "version": "0.4.2",
+  "version": "0.4.5",
   "description": "Youtube player React component.",
   "private": false,
   "keywords": [
@@ -34,8 +34,8 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "react": "^17.0.2 | ^18.0.0 | ^19.0.0",
-    "react-dom": "^17.0.2 | ^18.0.0 | ^19.0.0"
+    "react": ">=17.0",
+    "react-dom": ">=17.0"
   },
   "devDependencies": {
     "react": "^19.0.0",
