--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,11 @@
     "baseUrl": "./src",
     "outDir": "./dist/types",
     "types": ["node"],
-    "moduleResolution": "node",  
-    "resolveJsonModule": true, 
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "emitDeclarationOnly": false,
+    "emitDeclarationOnly": true,
     "sourceMap": true,
     "jsx": "preserve"
   },
